# torch_dynamo_test

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
tests/: test_dynamo_extract_node.py  test_model_pool.py
torch_dynamo_example/: collect_op_on_modles.py  example_test.py
torch_dynamo_example/graph_visiter/: collect_ops.py  visitor.py
torch_dynamo_example/model_pool/: huggingface_model.py
torch_dynamo_test/: collect_op_on_modles.py  example_test.py
torch_dynamo_test/graph_visiter/: collect_ops.py  modify_node_visitor.py  visitor.py
