[tool.poetry]
name = "torch-dynamo-example"
version = "0.1.0"
description = ""
authors = ["0x00-pl <0x00.pl@gmail.com>"]
readme = "README.md"
packages = [{include = "torch_dynamo_example"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = {version = ">2", source = "torch-cpu"}
numpy = "^1.26.2"
tabulate = "^0.9.0"


[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"


[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
